fix: rtl-text-alignment

--- a/app/assets/stylesheets/rtl_layout.scss
+++ b/app/assets/stylesheets/rtl_layout.scss
@@ -11,4 +11,8 @@
   .footer-social-icon-text {
     margin-right: 15px !important;
   }
+
+  .anchor-text {
+    margin-right: 9px !important;
+  }
 }
